@@ -14,11 +14,10 @@ package org.jnosql.demo.se;
 
 import jakarta.enterprise.inject.se.SeContainer;
 import jakarta.enterprise.inject.se.SeContainerInitializer;
-import org.eclipse.jnosql.mapping.graph.GraphTemplate;
+import org.eclipse.jnosql.databases.tinkerpop.mapping.GraphTemplate;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.tinkerpop.gremlin.process.traversal.P.between;
 import static org.apache.tinkerpop.gremlin.process.traversal.P.gte;
 
@@ -57,14 +56,14 @@ public final class MarketingApp {
                     .has("salary", gte(3_000D))
                     .has("age", between(20, 25))
                     .has("occupation", "Developer")
-                    .<Person>result().collect(toList());
+                    .<Person>result().toList();
 
             List<Person> peopleWhoDeveloperKnows = template.traversalVertex()
                     .has("salary", gte(3_000D))
                     .has("age", between(20, 25))
                     .has("occupation", "Developer")
                     .out("knows")
-                    .<Person>result().collect(toList());
+                    .<Person>result().toList();
 
             List<Person> both = template.traversalVertex()
                     .has("salary", gte(3_000D))
@@ -74,7 +73,7 @@ public final class MarketingApp {
                     .bothV()
                     .<Person>result()
                     .distinct()
-                    .collect(toList());
+                    .toList();
 
             List<Person> couple = template.traversalVertex()
                     .has("salary", gte(3_000D))
@@ -85,7 +84,7 @@ public final class MarketingApp {
                     .bothV()
                     .<Person>result()
                     .distinct()
-                    .collect(toList());
+                    .toList();
 
             System.out.println("Developers has salary greater than 3000 and age between 20 and 25: " + developers);
             System.out.println("Person who the Developers target know: " + peopleWhoDeveloperKnows);
