@@ -12,7 +12,7 @@ package org.jnosql.demo.se;
 
 import jakarta.enterprise.inject.se.SeContainer;
 import jakarta.enterprise.inject.se.SeContainerInitializer;
-import org.eclipse.jnosql.mapping.graph.GraphTemplate;
+import org.eclipse.jnosql.databases.tinkerpop.mapping.GraphTemplate;
 
 import java.util.List;
 import java.util.Map;
@@ -20,7 +20,6 @@ import java.util.function.Function;
 
 import static java.util.stream.Collectors.counting;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 
 public final class TravelApp {
 
@@ -114,7 +113,7 @@ public final class TravelApp {
             List<String> friendsCasaBlanca = graph.traversalVertex()
                     .hasLabel("City")
                     .has("name", "Casa Blanca")
-                    .in(TRAVELS).<Traveler>result().map(Traveler::getName).collect(toList());
+                    .in(TRAVELS).<Traveler>result().map(Traveler::getName).toList();
 
             System.out.println("The city most fun: "+ mostFunCity);
             System.out.println("The city most business: "+ mostBusiness);
